ubiquity (2.7.8) UNRELEASED; urgency=low

  * Fix xvfb-run error handling.
  * Don't run xvfb-run under fakeroot, as that confuses the X server.
  * Exclude everything under debian/ from tests/run-pyflakes, as otherwise
    it's impossible to clean a built tree.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 13 Jun 2011 15:24:19 +0100

ubiquity (2.7.7) oneiric; urgency=low

  * Show output from xauth and Xrdb after calling xvfb-run.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 13 Jun 2011 14:52:59 +0100

ubiquity (2.7.6) oneiric; urgency=low

  * Support filesystem.manifest-remove (equivalent to the difference between
    filesystem.manifest and filesystem.manifest-desktop in the old style),
    generated by live-build >= 3.0~a20-1.
  * Remove /target/etc/apt/sources.list.d/dvd.list before creating new apt
    configuration.  The livecd-rootfs live-build integration will create
    this in DVD images.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 12 Jun 2011 00:23:14 +0100

ubiquity (2.7.5) oneiric; urgency=low

  * Stop installing earth.jpg; it's 250KiB and we no longer use it.
  * Automatic update of included source packages: apt-setup 1:0.49ubuntu6,
    base-installer 1.119ubuntu1, choose-mirror 2.38ubuntu2, clock-setup
    0.108ubuntu1, debian-installer-utils 1.84ubuntu1, grub-installer
    1.64ubuntu2, localechooser 2.37ubuntu1, netcfg 1.62ubuntu2, partconf
    1.37, partman-base 150ubuntu1, partman-basicfilesystems 70ubuntu1,
    partman-basicmethods 48, partman-btrfs 6ubuntu1, partman-efi 24ubuntu1,
    partman-ext3 64ubuntu1, partman-jfs 34, partman-partitioning 81ubuntu1,
    partman-reiserfs 51, partman-xfs 48, preseed 1.49ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 08 Jun 2011 15:47:52 +0100

ubiquity (2.7.4) oneiric; urgency=low

  * Fix sys.path handling in test_ubi_partman.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 May 2011 20:55:01 +0100

ubiquity (2.7.3) oneiric; urgency=low
