@@ -44,9 +44,8 @@ my @basebd = (
     'pkg-config',
     'po-debconf (>= 1.0)',
     'pyflakes',
-    'python-all-dev (>= 2.6)',
+    'python-all-dev (>= 2.6.6-3~)',
     'python-apt',
-    'python-central (>= 0.5)',
     'python-gobject-dev',
     'python-gtk2-dev',
     'python-libxml2',
