@@ -4,6 +4,7 @@ ubiquity (2.7.8) UNRELEASED; urgency=low
   * Don't run xvfb-run under fakeroot, as that confuses the X server.
   * Exclude everything under debian/ from tests/run-pyflakes, as otherwise
     it's impossible to clean a built tree.
+  * Convert to dh_python2.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 13 Jun 2011 15:24:19 +0100
 
